@@ -43,6 +43,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13158: Fix decoding and encoding of GNU tar specific base-256 number
+  fields in tarfile.
+
 - Issue #13025: mimetypes is now reading MIME types using the UTF-8 encoding,
   instead of the locale encoding.
 
